// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalView renders RTL styling if provided 1`] = `
<div
  className="c-dialog is-rtl "
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders animate styling if provided 1`] = `
<div
  className="c-dialog is-open "
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders default styling 1`] = `
<div
  className="c-dialog "
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders large styling if provided 1`] = `
<div
  className="c-dialog c-dialog--large "
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;
